# suricata-rule-scoring

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
examples/: false-positive-prone.rules  false-positive-resistant.rules
suricata_rule_scoring/: __init__.py  __main__.py  cli.py  config.py  criteria.py  models.py  plugin.py  scorer.py  stats.py
suricata_rule_scoring/scoring_profiles/: default.yaml
tests/: test_cli.py  test_config.py  test_criteria.py  test_models.py  test_plugins.py  test_scorer.py
tests/fixtures/: sample_rules.rules  test_profile.yaml
